tests/errors/syn_for5.java
public class syn_for5 {
public static void main(String[] args){
for ( ; ; {
 
}
}
}